--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.14.2",
-    "eslint-plugin-react-hooks": "^2.5.0"
+    "eslint-plugin-react": "^7.14.2"
   },
   "dependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.6.0",
+    "eslint": "^7.3.1",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "prettier": "^2.0.5"
   }
 }
